fixed android user details issue with wrong aligned user image

--- a/app/pages/tabView/listView/userDetails/userDetails-common.css
+++ b/app/pages/tabView/listView/userDetails/userDetails-common.css
@@ -21,13 +21,12 @@ StackLayout {
 }
 
 .user-details {
-    z-index: 10;
+    margin-top: -120vh;
 }
 
 .user-details Image {
     width: 150vw;
     height: 150vw;
-    margin-top: -120vh;
     border-width: 2;
     border-radius: 150;
     border-color: #578C87;
